修复了底部tab宽度适配问题

--- a/web/views/css/category.css
+++ b/web/views/css/category.css
@@ -215,7 +215,7 @@ body {
   height: 3.12rem;
 }
 .bottom-tab {
-  width: 100%;
+  width: 15rem;
   height: 2.32rem;
   display: flex;
   position: fixed;
