--- a/web/views/css/index.less
+++ b/web/views/css/index.less
@@ -171,7 +171,7 @@ body {
 
 // bottom-tab
 .bottom-tab {
-    width: 100%;
+    width: 15rem;
     height: (58rem / @baseFont);
     display: flex;
     position: fixed;
